Offer modal got rid of images, made new ones

--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
         </div>
         <div id="offer-modal" class="hidden">
           <img id="banker-img" src="/banker-img.png" alt="banker img" />
-          <img id="offer-text-img" src="/offer-text.png" alt="offer text" />
-          <div id="offer-modal-amount"></div>
+          <p id="offer-text">YOUR OFFER:</p>
+          <div id="offer-modal-amount">$100,000</div>
           <div id="offer-modal-btns">
-            <button id="offer-modal-accept" type="button"></button>
+            <button id="offer-modal-accept" type="button">DEAL</button>
             <p id="offer-modal-or">OR</p>
-            <button id="offer-modal-refuse" type="button"></button>
+            <button id="offer-modal-refuse" type="button">NO DEAL</button>
           </div>
         </div>
         <div id="board" class="hidden">
