--- a/index.html
+++ b/index.html
@@ -19,9 +19,17 @@
         </div>
       </div>
       <div id="game-info" class="hidden">
-        <div id="info-case"></div>
-        <div id="info-offer"></div>
-        <div id="info-cases-to-open"></div>
+        <div id="info-your-case">
+          <p id="info-your-case-label">Your Case:</p>
+        </div>
+        <div id="info-offer">
+          <span id="info-offer-label">Current Offer:</span>
+          <span id="info-offer-span">$ <span id="info-offer-value"></span></span>
+        </div>
+        <div id="info-cases-to-open">
+          <span id="info-cases-to-open-label">Cases To Open:</span>
+          <span id="info-cases-to-open-value"></span>
+        </div>
       </div>
     </div>
     <div id="bottom">
