Working pretty well. Need to end game, reset game

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/assets/favicon/favicon-192.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite Template</title>
+  <title>Deal or No Deal</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         </div>
         <div id="info-offer">
           <span id="info-offer-label">Current Offer:</span>
-          <span id="info-offer-span">$ <span id="info-offer-value"></span></span>
+          <span id="info-offer-span"><span id="info-offer-value"></span></span>
         </div>
         <div id="info-cases-to-open">
           <span id="info-cases-to-open-label">Cases To Open:</span>
@@ -143,7 +143,7 @@
         <div id="offer-modal" class="hidden">
           <img id="banker-img" src="/banker-img.png" alt="banker img" />
           <p id="offer-text">YOUR OFFER:</p>
-          <div id="offer-modal-amount">$100,000</div>
+          <div id="offer-modal-amount"></div>
           <div id="offer-modal-btns">
             <button id="offer-modal-accept" type="button">DEAL</button>
             <p id="offer-modal-or">OR</p>
