Working pretty well. Need to finish playing until the end

--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <button id="offer-modal-refuse" type="button">NO DEAL</button>
           </div>
         </div>
+        <div id="end-game-modal" class="hidden">
+          <div id="end-game-modal-content" class="modal-content">
+            <p>You <span id="accept-or-refuse-span"></span>
+              the offer of: <span id="final-offer-span"></span></p>
+            <p>Your case was worth: <span id="your-case-value-span"></span></p>
+            <p>You made a... <span id="good-or-bad-span"></span> deal!!</p>
+            <button id="end-game-modal-submit" class="btn">Play Again</button>
+          </div>
+        </div>
         <div id="board" class="hidden">
           <div class="case-row odd">
             <div id="case-1" class="case">
